--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>microservicecloud-eureka-7001</module>
         <module>microservicecloud-eureka-7002</module>
         <module>microservicecloud-eureka-7003</module>
+        <module>microservicecloud-provider-dept-8002</module>
+        <module>microservicecloudproviderdept8003</module>
+        <module>microservicecloud-provider-dept-8003</module>
     </modules>
     <packaging>pom</packaging>
 
