Zuul路由访问映射规则

--- a/microservicecloud-zuul-gateway-9527/src/main/resources/application.yml
+++ b/microservicecloud-zuul-gateway-9527/src/main/resources/application.yml
@@ -5,6 +5,13 @@ spring:
   application:
     name: microservicecloud-zuul-gateway
 
+zuul:
+  prefix: /monochrome
+  ignored-services: "*"
+  routes:
+    mydept.serviceId: microservicecloud-dept
+    mydept.path: /mydept/**
+
 eureka:
   client:
     service-url:
@@ -12,7 +19,6 @@ eureka:
   instance:
     instance-id: gateway-9527.com
     prefer-ip-address: true
-
 
 info:
   app.name: monochrome-microservicecloud
